# mesh-chat

./: .gitignore  ARCHITECTURE.md  README.md
blebla/: README.md  app.json  package-lock.json  package.json
blebla/app/: _layout.tsx  ble-chat.tsx  home.tsx  index.tsx  profile.tsx  qr-exchange.tsx
blebla/app/chat/: [id].tsx
blebla/components/chat/: AppBar.tsx  ChatBubble.tsx  ChatItem.tsx  FAB.tsx  MessageInput.tsx  QRComponents.tsx  index.ts
blebla/constants/: colors.ts
blebla/context/: ChatContext.tsx  ThemeContext.tsx  ToastContext.tsx
blebla/data/: mock-data.ts
blebla/hooks/: index.ts  use-ble.ts  use-mesh-bridge.ts
blebla/plugins/: withMeshBridge.js
blebla/services/: MeshBridgeService.ts  index.ts
daemon/: CMakeLists.txt
daemon/include/: meshcore.h
daemon/ios/: meshcore-bridge.h
daemon/src/: daemon.cpp  daemon.h  loopback_transport.cpp  loopback_transport.h  meshcore-bridge.c  meshcore_bridge.c  meshcore_impl.cpp  meshcore_impl.h  transport.h
daemon/test/: daemon_test.cpp  loopback_test.cpp  meshcore_c_test.c
dubey-daemon/ideation/: phases.txt
engine/: go.mod
ideation/: phases.md
nativeModule-ios/: MeshBridge-Bridging-Header.h  README.md
nativeModule-ios/MeshBLE/: BLEConstants.swift  BLEManager.swift
nativeModule-ios/MeshBridge/: MeshBridge.m  MeshBridge.swift
nativeModule-ios/MeshCore/: MeshCore.h  MeshCore.m
